--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -353,17 +353,26 @@ services:
     image: ghcr.io/home-assistant/home-assistant:stable
     container_name: homeassistant
     restart: unless-stopped
+    network_mode: host
     volumes:
       - homeassistant_config:/config
       - /etc/localtime:/etc/localtime:ro
     environment:
       - TZ=${TZ}
-    ports:
-      - 8123:8123
     devices:
       - ${ZIGBEE_DONGLE_PATH}:/dev/ttyUSB0
+    depends_on:
+      - mosquitto
+      - zigbee2mqtt
+
+  # Proxy pour Home Assistant (permet l'accès via Traefik)
+  homeassistant-proxy:
+    image: nginx:alpine
+    container_name: homeassistant-proxy
+    restart: unless-stopped
+    volumes:
+      - ./nginx-ha.conf:/etc/nginx/conf.d/default.conf:ro
     networks:
-      - homeassistant_net
       - traefik_net
     labels:
       - "traefik.enable=true"
@@ -371,11 +380,11 @@ services:
       - "traefik.http.routers.homeassistant.entrypoints=websecure"
       - "traefik.http.routers.homeassistant.tls=true"
       - "traefik.http.routers.homeassistant.tls.certresolver=letsEncrypt"
-      - "traefik.http.services.homeassistant.loadbalancer.server.port=8123"
+      - "traefik.http.services.homeassistant.loadbalancer.server.port=80"
       - "traefik.docker.network=traefik_net"
     depends_on:
-      - mosquitto
-      - zigbee2mqtt
+      - traefik
+      - homeassistant
     profiles:
       - domotique
       - all
