Maj du .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 # Configuration générale
 TZ=Europe/Paris
+PUID=
+PGID=
 
 # Homarr
 HOMARR_SECRET_ENCRYPTION_KEY=
@@ -10,41 +12,24 @@ TRAEFIK_ACME_EMAIL=
 # N8N
 N8N_BASIC_AUTH_USER=
 N8N_BASIC_AUTH_PASSWORD=
-N8N_JWT_SECRET=
 
 # Base de données N8N
-DB_POSTGRESDB_USER=
-DB_POSTGRESDB_PASSWORD=
-
-# Redis
-REDIS_PASSWORD=
-
-# PostgreSQL
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-
-# MySQL
-MYSQL_ROOT_PASSWORD=
-
-# Plex
-PLEX_CLAIM=
+N8N_POSTGRES_USER=
+N8N_POSTGRES_PASSWORD=
+N8N_POSTGRES_DB=
 
 # Zigbee
 ZIGBEE_DONGLE_PATH=
 
-# Secrith Backend
-MONGODB_URI=
-JWT_SECRET=
-JWT_EXPIRES_IN=
-
 # Planka
 PLANKA_SECRET_KEY=
+PLANKA_POSTGRES_USER=
+PLANKA_POSTGRES_PASSWORD=
+PLANKA_POSTGRES_DB=
+PLANKA_DEFAULT_ADMIN_USERNAME=
+PLANKA_DEFAULT_ADMIN_PASSWORD=
+PLANKA_DEFAULT_ADMIN_EMAIL=
+PLANKA_DEFAULT_ADMIN_NAME=
 
 # Domaines
 DOMAIN_BASE=
-DOMAIN_SECRITH_API=
-DOMAIN_SECRITH=
-
-# Chemins des volumes
-MEDIA_PATH=
-HDD_PATH=
