Update .env.example with media and watchtower vars

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,14 @@ PLANKA_DEFAULT_ADMIN_NAME=
 
 # Domaines
 DOMAIN_BASE=
+
+# Watchtower - Notifications Email (OVH SMTP)
+WATCHTOWER_NOTIFICATION_EMAIL_FROM=
+WATCHTOWER_NOTIFICATION_EMAIL_TO=
+WATCHTOWER_NOTIFICATION_EMAIL_SERVER=
+WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=
+WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=
+WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
+
+# Media - Chemin racine pour tous les médias (downloads, films, séries)
+MEDIA_PATH=
