OIDC sur homarr

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,12 @@ PGID=
 # Homarr
 HOMARR_SECRET_ENCRYPTION_KEY=
 
+# Homarr SSO avec Authentik
+HOMARR_OIDC_CLIENT_ID=
+HOMARR_OIDC_CLIENT_SECRET=
+HOMARR_OIDC_SLUG=
+HOMARR_OIDC_AUTO_LOGIN=false
+
 # Traefik
 TRAEFIK_ACME_EMAIL=
 
@@ -44,3 +50,11 @@ WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
 
 # Media - Chemin racine pour tous les médias (downloads, films, séries)
 MEDIA_PATH=
+
+# Authentik - SSO/Identity Provider
+AUTHENTIK_POSTGRES_USER=authentik
+AUTHENTIK_POSTGRES_PASSWORD=
+AUTHENTIK_POSTGRES_DB=authentik
+AUTHENTIK_SECRET_KEY=
+# Optionnel: version d'Authentik (par défaut: 2025.10.1)
+AUTHENTIK_TAG=2025.10.1
