update readme pour oidc

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ HOMARR_SECRET_ENCRYPTION_KEY=
 HOMARR_OIDC_CLIENT_ID=
 HOMARR_OIDC_CLIENT_SECRET=
 HOMARR_OIDC_SLUG=
-HOMARR_OIDC_AUTO_LOGIN=false
+HOMARR_OIDC_AUTO_LOGIN=
 
 # Traefik
 TRAEFIK_ACME_EMAIL=
@@ -30,7 +30,7 @@ ZIGBEE_DONGLE_PATH=
 # Planka
 PLANKA_SECRET_KEY=
 PLANKA_POSTGRES_USER=
-PLANKA_POSTGRES_PASSWORD=
+PLANKA_POSTGRES_PASSWORD=@ssw0rd
 PLANKA_POSTGRES_DB=
 PLANKA_DEFAULT_ADMIN_USERNAME=
 PLANKA_DEFAULT_ADMIN_PASSWORD=
@@ -52,9 +52,27 @@ WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=
 MEDIA_PATH=
 
 # Authentik - SSO/Identity Provider
-AUTHENTIK_POSTGRES_USER=authentik
+AUTHENTIK_POSTGRES_USER=
 AUTHENTIK_POSTGRES_PASSWORD=
-AUTHENTIK_POSTGRES_DB=authentik
+AUTHENTIK_POSTGRES_DB=
 AUTHENTIK_SECRET_KEY=
+AUTHENTIK_BOOTSTRAP_PASSWORD=
+AUTHENTIK_BOOTSTRAP_EMAIL=
+
 # Optionnel: version d'Authentik (par défaut: 2025.10.1)
-AUTHENTIK_TAG=2025.10.1
+AUTHENTIK_TAG=
+
+# Jellyfin SSO avec Authentik
+# Note: Ces valeurs seront générées dans l'interface Authentik
+# Créez un provider OAuth2/OpenID avec Redirect URI: https://jellyfin.${DOMAIN_BASE}/sso/OID/redirect/authentik
+JELLYFIN_OIDC_CLIENT_ID=
+JELLYFIN_OIDC_CLIENT_SECRET=
+
+# Authentik Proxy Outpost - Token pour l'authentification des apps *arr
+# Note: Ce token sera généré dans l'interface Authentik après création de l'outpost
+# Allez dans Admin > Outposts > [Votre outpost] et copiez le token
+AUTHENTIK_PROXY_TOKEN=
+
+# Portainer SSO avec Authentik
+PORTAINER_OIDC_CLIENT_ID=
+PORTAINER_OIDC_CLIENT_SECRET=
