Ajout SSO Authentik (OIDC/Forward Auth) + optimisation RAM

--- a/.env.example
+++ b/.env.example
@@ -15,27 +15,21 @@ HOMARR_OIDC_AUTO_LOGIN=
 # Traefik
 TRAEFIK_ACME_EMAIL=
 
-# N8N
-N8N_BASIC_AUTH_USER=
-N8N_BASIC_AUTH_PASSWORD=
-
-# Base de données N8N
-N8N_POSTGRES_USER=
-N8N_POSTGRES_PASSWORD=
-N8N_POSTGRES_DB=
-
 # Zigbee
 ZIGBEE_DONGLE_PATH=
 
 # Planka
 PLANKA_SECRET_KEY=
 PLANKA_POSTGRES_USER=
-PLANKA_POSTGRES_PASSWORD=@ssw0rd
+PLANKA_POSTGRES_PASSWORD=
 PLANKA_POSTGRES_DB=
-PLANKA_DEFAULT_ADMIN_USERNAME=
-PLANKA_DEFAULT_ADMIN_PASSWORD=
-PLANKA_DEFAULT_ADMIN_EMAIL=
-PLANKA_DEFAULT_ADMIN_NAME=
+
+# Planka SSO avec Authentik (OIDC)
+# Note: Ces valeurs seront générées dans l'interface Authentik
+# Créez un provider OAuth2/OpenID avec Redirect URI: https://planka.${DOMAIN_BASE}/oidc-callback
+PLANKA_OIDC_CLIENT_ID=
+PLANKA_OIDC_CLIENT_SECRET=
+PLANKA_OIDC_ADMIN_ROLES=admins
 
 # Domaines
 DOMAIN_BASE=
