Mise à jour en-tête docker-compose et services Homepage
- Retrait de Homarr et N8N (services supprimés)
- Ajout de Homepage, Glances et Authentik dans l'en-tête
- Suppression de N8N dans services.yaml de Homepage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 # Docker Compose avec profils
 # Profils disponibles:
-# - infrastructure: Services de base (Traefik, OMV-Proxy, Portainer, Watchtower, Homarr)
-# - dashboard: Tableaux de bord (Homarr)
+# - infrastructure: Services de base (Traefik, OMV-Proxy, Portainer, Watchtower)
+# - dashboard: Tableaux de bord (Homepage)
 # - media: Services liés aux médias (Jellyfin, Jellyseerr, Radarr, Sonarr, Prowlarr, qBittorrent)
-# - automation: Services d'automatisation (N8N, n8n-db PostgreSQL)
 # - tools: Outils divers (Planka, planka-db PostgreSQL, Snapdrop)
 # - domotique: Services domotique (Home Assistant avec support Zigbee)
+# - monitoring: Surveillance système (Glances)
+# - auth: Authentification SSO (Authentik, authentik-db, authentik-worker)
 # - all: Tous les services
 #
 # Utilisation:
