--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,8 +37,9 @@ services:
             retries: 3
         command:
             - "--api.dashboard=false"
-            - "--api.insecure=false"
+            - "--api.insecure=true"
             - "--providers.docker=true"
+            - "--log.level=DEBUG"
             - "--ping=true"
             - "--entrypoints.web.address=:80"
             - "--entrypoints.websecure.address=:443"
@@ -640,6 +641,7 @@ services:
             - traefik_net
         profiles:
             - infrastructure
+            - devtools
             - all
 
     # Authentik Server - SSO/Identity Provider
@@ -689,6 +691,7 @@ services:
             - "traefik.docker.network=traefik_net"
         profiles:
             - infrastructure
+            - devtools
             - all
 
     # Authentik Worker - Background tasks
@@ -725,6 +728,7 @@ services:
             - authentik_custom_templates:/templates
         profiles:
             - infrastructure
+            - devtools
             - all
 
     # Homepage - Dashboard léger
@@ -775,7 +779,7 @@ services:
 
     # SonarQube - Analyse de code
     sonarqube:
-        image: sonarqube:lts-community
+        image: sonarqube:community
         container_name: sonarqube
         restart: unless-stopped
         deploy:
@@ -793,7 +797,7 @@ services:
             test:
                 [
                     "CMD-SHELL",
-                    "curl -f http://localhost:9000/api/system/status || exit 1",
+                    "wget -qO- http://localhost:9000/api/system/status || exit 1",
                 ]
             interval: 30s
             timeout: 10s
@@ -817,11 +821,6 @@ services:
             - "traefik.http.routers.sonarqube.tls.certresolver=letsEncrypt"
             - "traefik.http.services.sonarqube.loadbalancer.server.port=9000"
             - "traefik.docker.network=traefik_net"
-            # Authentik SSO via Proxy
-            - "traefik.http.routers.sonarqube.middlewares=authentik-sonarqube@docker"
-            - "traefik.http.middlewares.authentik-sonarqube.forwardauth.address=http://authentik-server:9000/outpost.goauthentik.io/auth/traefik"
-            - "traefik.http.middlewares.authentik-sonarqube.forwardauth.trustForwardHeader=true"
-            - "traefik.http.middlewares.authentik-sonarqube.forwardauth.authResponseHeaders=X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid"
         profiles:
             - devtools
             - all
